--- a/src/index.scss
+++ b/src/index.scss
@@ -53,7 +53,7 @@ body {
     &__inner {
       height: 100%;
       border-radius: 30px;
-      width: 80%;
+      width: 0;
       background: rgb(18, 231, 48);
       transition: all 0.3s ease-in-out;
       background: linear-gradient(90deg, rgba(18, 231, 48, 1) 0%, rgba(0, 212, 255, 1) 100%);
